# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  sample_from_light.ppm
images/: final_render.pbm  fov_test.pbm  gamma_correction.pbm  glass_reflectance.pbm  lambertian_law.pbm  material.pbm  max_depth.pbm  positionableCamera.pbm  shadow_acne_removed.pbm  sphere.pbm  zoom_in.pbm
images/inOneWeekend/: SSAA_world.pbm  TIR.pbm  blue_white.pbm  defocus_blur.ppm  fuzziness.ppm  normal_sphere.pbm  test.pbm  world.ppm
images/nextWeek/: blur_perlin.pbm  bvh.ppm  checker.ppm  checker_scene.ppm  cornell_box.ppm  cornell_box_rot_translate.pbm  cornell_smoke.ppm  earth.pbm  final_render.ppm  hermite_blur.ppm  marble.ppm  scale.perlin.noise.pbm  simple_light.ppm
images/restOfYourLife/: cornell_代码敲错但感觉还蛮好看的.ppm  cosine_pdf_cornell.ppm  final_render.ppm  lambertian_pdf_cornell.ppm  light_pdf.ppm  metal_material_cornell.ppm  mixed_pdf.ppm  sample_direct_from_light_cornell.ppm  sample_from_light.ppm  sample_glass_sphere.ppm
src/InOneWeekend/: camera.h  check.txt  color.h  common.h  hittable.h  hittable_list.h  interval.h  main  main.cpp  material.h  ray.h  sphere.h  vec3.h
src/cuda_restOfYourLife/: aabb.h  camera.h  color.h  common.h  cuda_renderer_bridge.cuh  hittable.h  hittable_list.h  main.cu  material.h  orthonormalbasis.h  quad.h  rtw_image.h  sphere.h  texture.h  vec3.h
src/inOneWeekend/: camera.h  hittable.h  material.h  ray.h  sphere.h
src/nextWeek/: aabb.h  camera.h  color.h  constant_medium.h  hittable.h  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  sphere.h  texture.h  vec3.h
src/restOfYourLife/: bvh.h  camera.h  color.h  constant_medium.h  hittable_list.h  main.cpp  material.h  moving_center.h  orthonormalbasis.h  pdf.h  perlin.h  quad.h  ray.h  sphere.h  vec3.h
